--- a/.tmux.conf
+++ b/.tmux.conf
@@ -162,6 +162,14 @@ if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
 
 run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @sidebar-tree-command 'tree -Ca'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-processes ':all:'
+
+run '~/.tmux/plugins/tpm/tpm'
+run-shell $DROPBOX/tmux-logging/logging.tmux
 
 # EOF
 #
