--- a/.tmux.conf
+++ b/.tmux.conf
@@ -169,12 +169,15 @@ if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
 run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sidebar'
-set -g @sidebar-tree-command 'tree -Ca'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @resurrect-processes ':all:'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @resurrect-strategy-nvim 'session'
+set -g @yank_action 'copy-pipe'
+set -g @plugin 'tmux-plugins/tmux-net-speed'
 
-run '~/.tmux/plugins/tpm/tpm'
+
+# set -g status-right '#{cpu_bg_color} CPU: #{cpu_icon} #{cpu_percentage} | %a %h-%d %H:%M '
+
+run -b '~/.tmux/plugins/tpm/tpm'  # initialize TPM https://github.com/tmux-plugins/tpm
 
 # EOF
 #
